Transition to R version 3.3
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/catlearn@13 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -1,3 +1,5 @@
 useDynLib(catlearn)
 exportPattern("^[[:alpha:]]+")
 importFrom(Rcpp, evalCpp)
+importFrom("graphics", "axis", "box", "legend", "lines", "plot")
+importFrom("utils", "data")
