Rewrote shin92.Rd as a CIRP registration; reduced shin92 data set to just the equal-frequency conditions, which are the subject of the CIRP.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/catlearn@21 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: catlearn
 Type: Package
-Title: Computational Models of Category Learning
-Version: 0.2.2
-Date: 2016-05-23
+Title: Catalog of Learning Models
+Version: 0.2.3
+Date: 2016-06-03
 Author: Andy Wills
 Maintainer: Andy Wills <andy@willslab.co.uk>
-Description: Compuational models of category learning, plus classic data sets against which to test them.
+Description: Compuational models of learning, independently-replicated data sets against which to test them, and simulation vignettes.
 License: GPL (>= 2)
 Imports: Rcpp (>= 0.11.6)
 LinkingTo: Rcpp
