Added shin92exalcove, shin92protoalcove sim archives. Added shin92oat. Modified shin92train to generate multiple subjects.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/catlearn@22 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -1,5 +1,7 @@
 useDynLib(catlearn)
-exportPattern("^[[:alpha:]]+")
+exportPattern("^[^\\.]")
 importFrom(Rcpp, evalCpp)
 importFrom("graphics", "axis", "box", "legend", "lines", "plot")
 importFrom("utils", "data")
+importFrom("stats", "aggregate")
+
