--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: catlearn
 Type: Package
 Title: Catalog of Learning Models
-Version: 0.2.14
-Date: 2016-06-10
+Version: 0.2.23
+Date: 2016-06-13
 Author: Andy Wills
 Maintainer: Andy Wills <andy@willslab.co.uk>
-Description: Compuational models of learning, independently-replicated data sets against which to test them, and simulation vignettes.
+Description: Compuational models of learning, independently-replicated data sets against which to test them, and simulation archives.
 License: GPL (>= 2)
 Imports: Rcpp (>= 0.11.6)
 LinkingTo: Rcpp
