slpDIVA ready for v.0.4 release.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/catlearn@155 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -2,6 +2,8 @@ useDynLib(catlearn)
 exportPattern("^[^\\.]")
 importFrom(Rcpp, evalCpp)
 importFrom("graphics", "axis", "box", "legend", "lines", "plot")
-importFrom("utils", "data")
 importFrom("stats", "aggregate")
+importFrom("stats", "runif")
+importFrom("utils", "combn")
+importFrom("utils", "data")
 
