--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -1,11 +1,13 @@
 Package: catlearn
 Type: Package
 Title: Formal Modeling for Psychology
-Version: 0.4
-Date: 2017-02-21
-Author: Andy Wills
+Version: 0.4.1
+Date: 2017-05-18
+Author: Andy Wills, Angus Inkster, Stuart Spicer, Garrett Honke
 Maintainer: Andy Wills <andy@willslab.co.uk>
 Description: Formal psychological models, independently-replicated data sets against which to test them, and simulation archives.
 License: GPL (>= 2)
 Imports: Rcpp (>= 0.12.6)
 LinkingTo: Rcpp
+LazyData: true
+
