--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -4,6 +4,7 @@ importFrom(Rcpp, evalCpp)
 importFrom("graphics", "axis", "box", "legend", "lines", "plot")
 importFrom("stats", "aggregate")
 importFrom("stats", "runif")
+importFrom("stats", "optim")
 importFrom("utils", "combn")
 importFrom("utils", "data")
 
