--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -1,13 +1,16 @@
 Package: catlearn
 Type: Package
 Title: Formal Modeling for Psychology
-Version: 0.4.1
-Date: 2017-05-18
+Version: 0.4.2
+Date: 2017-05-25
 Author: Andy Wills, Angus Inkster, Stuart Spicer, Garrett Honke
 Maintainer: Andy Wills <andy@willslab.co.uk>
 Description: Formal psychological models, independently-replicated data sets against which to test them, and simulation archives.
 License: GPL (>= 2)
-Imports: Rcpp (>= 0.12.6)
+Imports:
+	Rcpp (>= 0.12.6),
+	doParallel,
+	foreach
 LinkingTo: Rcpp
 LazyData: true
 
