--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -2,9 +2,9 @@ useDynLib(catlearn)
 exportPattern("^[^\\.]")
 importFrom(Rcpp, evalCpp)
 importFrom("graphics", "axis", "box", "legend", "lines", "plot")
-importFrom("stats", "aggregate")
-importFrom("stats", "runif")
-importFrom("stats", "optim")
-importFrom("utils", "combn")
-importFrom("utils", "data")
+importFrom("stats", "aggregate", "runif", "optim")
+importFrom("utils", "combn", "data")
+importFrom("parallel", "detectCores", "makeCluster", "stopCluster")
+importFrom("doParallel", "registerDoParallel")
+importFrom("foreach", "foreach", "%dopar%")
 
