--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: catlearn
 Type: Package
-Title: Formal Modeling for Psychology
-Version: 0.4.9
+Title: Formal Psychological Models of Categorization and Learning
+Version: 0.4.10
 Date: 2017-11-08
-Author: Lenard Dome, Garrett Honke, Angus Inkster, Rene Schegelmilch, Stuart Spicer, Andy Wills
+Author: Catlearn Core Team
 Maintainer: Andy Wills <andy@willslab.co.uk>
-Description: Formal psychological models, independently-replicated data sets against which to test them, and simulation archives.
+Description: Formal psychological models of categorization and learning, independently-replicated data sets against which to test them, and simulation archives.
 License: GPL (>= 2)
 Imports:
 	Rcpp (>= 0.12.6),
