--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -3,7 +3,8 @@ Type: Package
 Title: Formal Psychological Models of Categorization and Learning
 Version: 0.5.3
 Date: 2018-07-12
-Author: Andy Wills, Lenard Dome, Charlotte Edmunds, Garrett Honke, Angus Inkster, Rene Schegelmilch, Stuart Spicer
+Encoding: UTF-8
+Author: Andy Wills, Lenard Dome, Charlotte Edmunds, Garrett Honke, Angus Inkster, René Schlegelmilch, Stuart Spicer
 Maintainer: Andy Wills <andy@willslab.co.uk>
 Description: Formal psychological models of categorization and learning, independently-replicated data sets against which to test them, and simulation archives.
 License: GPL (>= 2)
